website/versioned_docs/0.26/picker.md
---
id: version-0.26-picker
title: picker
original_id: picker
---
<a id="content"></a><table width="100%"><tbody><tr><td><h1><a class="anchor" name="picker"></a>Picker <a class="hash-link" href="docs/picker.html#picker">#</a></h1></td><td style="text-align:right;"><a target="_blank" href="https://github.com/facebook/react-native/blob/master/Libraries/Components/Picker/Picker.js">Edit on GitHub</a></td></tr></tbody></table><div><div><p>Renders the native picker component on iOS and Android. Example:</p><div class="prism language-javascript">&lt;Picker
  selectedValue<span class="token operator">=</span><span class="token punctuation">{</span><span class="token keyword">this</span><span class="token punctuation">.</span>state<span class="token punctuation">.</span>language<span class="token punctuation">}</span>
  onValueChange<span class="token operator">=</span><span class="token punctuation">{</span><span class="token punctuation">(</span>lang<span class="token punctuation">)</span> <span class="token operator">=</span><span class="token operator">&gt;</span> <span class="token keyword">this</span><span class="token punctuation">.</span><span class="token function">setState<span class="token punctuation">(</span></span><span class="token punctuation">{</span>language<span class="token punctuation">:</span> lang<span class="token punctuation">}</span><span class="token punctuation">)</span><span class="token punctuation">}</span><span class="token operator">&gt;</span>
  &lt;Picker<span class="token punctuation">.</span>Item label<span class="token operator">=</span><span class="token string">"Java"</span> value<span class="token operator">=</span><span class="token string">"java"</span> <span class="token operator">/</span><span class="token operator">&gt;</span>
  &lt;Picker<span class="token punctuation">.</span>Item label<span class="token operator">=</span><span class="token string">"JavaScript"</span> value<span class="token operator">=</span><span class="token string">"js"</span> <span class="token operator">/</span><span class="token operator">&gt;</span>
&lt;<span class="token operator">/</span>Picker<span class="token operator">&gt;</span></div></div><h3><a class="anchor" name="props"></a>Props <a class="hash-link" href="docs/picker.html#props">#</a></h3><div class="props"><div class="prop"><h4 class="propTitle"><a class="anchor" name="view"></a><a href="docs/view.html#props">View props...</a> <a class="hash-link" href="docs/picker.html#view">#</a></h4></div><div class="prop"><h4 class="propTitle"><a class="anchor" name="onvaluechange"></a>onValueChange <span class="propType">function</span> <a class="hash-link" href="docs/picker.html#onvaluechange">#</a></h4><div><p>Callback for when an item is selected. This is called with the following parameters:
  - <code>itemValue</code>: the <code>value</code> prop of the item that was selected
  - <code>itemPosition</code>: the index of the selected item in this picker</p></div></div><div class="prop"><h4 class="propTitle"><a class="anchor" name="selectedvalue"></a>selectedValue <span class="propType">any</span> <a class="hash-link" href="docs/picker.html#selectedvalue">#</a></h4><div><p>Value matching value of one of the items. Can be a string or an integer.</p></div></div><div class="prop"><h4 class="propTitle"><a class="anchor" name="style"></a>style <span class="propType">pickerStyleType</span> <a class="hash-link" href="docs/picker.html#style">#</a></h4></div><div class="prop"><h4 class="propTitle"><a class="anchor" name="testid"></a>testID <span class="propType">string</span> <a class="hash-link" href="docs/picker.html#testid">#</a></h4><div><p>Used to locate this view in end-to-end tests.</p></div></div><div class="prop"><h4 class="propTitle"><a class="anchor" name="enabled"></a><span class="platform">android</span>enabled <span class="propType">bool</span> <a class="hash-link" href="docs/picker.html#enabled">#</a></h4><div><p>If set to false, the picker will be disabled, i.e. the user will not be able to make a
selection.</p></div></div><div class="prop"><h4 class="propTitle"><a class="anchor" name="mode"></a><span class="platform">android</span>mode <span class="propType">enum('dialog', 'dropdown')</span> <a class="hash-link" href="docs/picker.html#mode">#</a></h4><div><p>On Android, specifies how to display the selection items when the user taps on the picker:</p><ul><li>'dialog': Show a modal dialog. This is the default.</li><li>'dropdown': Shows a dropdown anchored to the picker view</li></ul></div></div><div class="prop"><h4 class="propTitle"><a class="anchor" name="prompt"></a><span class="platform">android</span>prompt <span class="propType">string</span> <a class="hash-link" href="docs/picker.html#prompt">#</a></h4><div><p>Prompt string for this picker, used on Android in dialog mode as the title of the dialog.</p></div></div><div class="prop"><h4 class="propTitle"><a class="anchor" name="itemstyle"></a><span class="platform">ios</span>itemStyle <span class="propType">itemStylePropType</span> <a class="hash-link" href="docs/picker.html#itemstyle">#</a></h4><div><p>Style to apply to each of the item labels.</p></div></div></div></div><div><div><table width="100%"><tbody><tr><td><h3><a class="anchor" name="examples"></a>Examples <a class="hash-link" href="docs/picker.html#examples">#</a></h3></td><td style="text-align:right;"><a target="_blank" href="https://github.com/facebook/react-native/blob/master/Examples/UIExplorer/PickerExample.js">Edit on GitHub</a></td></tr></tbody></table><div class="prism language-javascript"><span class="token string">'use strict'</span><span class="token punctuation">;</span>

const React <span class="token operator">=</span> <span class="token function">require<span class="token punctuation">(</span></span><span class="token string">'react'</span><span class="token punctuation">)</span><span class="token punctuation">;</span>
const ReactNative <span class="token operator">=</span> <span class="token function">require<span class="token punctuation">(</span></span><span class="token string">'react-native'</span><span class="token punctuation">)</span><span class="token punctuation">;</span>
const StyleSheet <span class="token operator">=</span> <span class="token function">require<span class="token punctuation">(</span></span><span class="token string">'StyleSheet'</span><span class="token punctuation">)</span><span class="token punctuation">;</span>
const UIExplorerBlock <span class="token operator">=</span> <span class="token function">require<span class="token punctuation">(</span></span><span class="token string">'UIExplorerBlock'</span><span class="token punctuation">)</span><span class="token punctuation">;</span>
const UIExplorerPage <span class="token operator">=</span> <span class="token function">require<span class="token punctuation">(</span></span><span class="token string">'UIExplorerPage'</span><span class="token punctuation">)</span><span class="token punctuation">;</span>

const <span class="token punctuation">{</span>
  Picker<span class="token punctuation">,</span>
  Text<span class="token punctuation">,</span>
  TouchableWithoutFeedback<span class="token punctuation">,</span>
<span class="token punctuation">}</span> <span class="token operator">=</span> ReactNative<span class="token punctuation">;</span>
const Item <span class="token operator">=</span> Picker<span class="token punctuation">.</span>Item<span class="token punctuation">;</span>

const PickerExample <span class="token operator">=</span> React<span class="token punctuation">.</span><span class="token function">createClass<span class="token punctuation">(</span></span><span class="token punctuation">{</span>

  statics<span class="token punctuation">:</span> <span class="token punctuation">{</span>
    title<span class="token punctuation">:</span> <span class="token string">'&lt;Picker&gt;'</span><span class="token punctuation">,</span>
    description<span class="token punctuation">:</span> <span class="token string">'Provides multiple options to choose from, using either a dropdown menu or a dialog.'</span><span class="token punctuation">,</span>
  <span class="token punctuation">}</span><span class="token punctuation">,</span>

  getInitialState<span class="token punctuation">:</span> <span class="token keyword">function</span><span class="token punctuation">(</span><span class="token punctuation">)</span> <span class="token punctuation">{</span>
    <span class="token keyword">return</span> <span class="token punctuation">{</span>
      selected1<span class="token punctuation">:</span> <span class="token string">'key1'</span><span class="token punctuation">,</span>
      selected2<span class="token punctuation">:</span> <span class="token string">'key1'</span><span class="token punctuation">,</span>
      selected3<span class="token punctuation">:</span> <span class="token string">'key1'</span><span class="token punctuation">,</span>
      color<span class="token punctuation">:</span> <span class="token string">'red'</span><span class="token punctuation">,</span>
      mode<span class="token punctuation">:</span> Picker<span class="token punctuation">.</span>MODE_DIALOG<span class="token punctuation">,</span>
    <span class="token punctuation">}</span><span class="token punctuation">;</span>
  <span class="token punctuation">}</span><span class="token punctuation">,</span>

  render<span class="token punctuation">:</span> <span class="token keyword">function</span><span class="token punctuation">(</span><span class="token punctuation">)</span> <span class="token punctuation">{</span>
    <span class="token keyword">return</span> <span class="token punctuation">(</span>
      &lt;UIExplorerPage title<span class="token operator">=</span><span class="token string">"&lt;Picker&gt;"</span><span class="token operator">&gt;</span>
        &lt;UIExplorerBlock title<span class="token operator">=</span><span class="token string">"Basic Picker"</span><span class="token operator">&gt;</span>
          &lt;Picker
            style<span class="token operator">=</span><span class="token punctuation">{</span>styles<span class="token punctuation">.</span>picker<span class="token punctuation">}</span>
            selectedValue<span class="token operator">=</span><span class="token punctuation">{</span><span class="token keyword">this</span><span class="token punctuation">.</span>state<span class="token punctuation">.</span>selected1<span class="token punctuation">}</span>
            onValueChange<span class="token operator">=</span><span class="token punctuation">{</span><span class="token keyword">this</span><span class="token punctuation">.</span>onValueChange<span class="token punctuation">.</span><span class="token function">bind<span class="token punctuation">(</span></span><span class="token keyword">this</span><span class="token punctuation">,</span> <span class="token string">'selected1'</span><span class="token punctuation">)</span><span class="token punctuation">}</span><span class="token operator">&gt;</span>
            &lt;Item label<span class="token operator">=</span><span class="token string">"hello"</span> value<span class="token operator">=</span><span class="token string">"key0"</span> <span class="token operator">/</span><span class="token operator">&gt;</span>
            &lt;Item label<span class="token operator">=</span><span class="token string">"world"</span> value<span class="token operator">=</span><span class="token string">"key1"</span> <span class="token operator">/</span><span class="token operator">&gt;</span>
          &lt;<span class="token operator">/</span>Picker<span class="token operator">&gt;</span>
        &lt;<span class="token operator">/</span>UIExplorerBlock<span class="token operator">&gt;</span>
        &lt;UIExplorerBlock title<span class="token operator">=</span><span class="token string">"Disabled picker"</span><span class="token operator">&gt;</span>
          &lt;Picker style<span class="token operator">=</span><span class="token punctuation">{</span>styles<span class="token punctuation">.</span>picker<span class="token punctuation">}</span> enabled<span class="token operator">=</span><span class="token punctuation">{</span><span class="token boolean">false</span><span class="token punctuation">}</span> selectedValue<span class="token operator">=</span><span class="token punctuation">{</span><span class="token keyword">this</span><span class="token punctuation">.</span>state<span class="token punctuation">.</span>selected1<span class="token punctuation">}</span><span class="token operator">&gt;</span>
            &lt;Item label<span class="token operator">=</span><span class="token string">"hello"</span> value<span class="token operator">=</span><span class="token string">"key0"</span> <span class="token operator">/</span><span class="token operator">&gt;</span>
            &lt;Item label<span class="token operator">=</span><span class="token string">"world"</span> value<span class="token operator">=</span><span class="token string">"key1"</span> <span class="token operator">/</span><span class="token operator">&gt;</span>
          &lt;<span class="token operator">/</span>Picker<span class="token operator">&gt;</span>
        &lt;<span class="token operator">/</span>UIExplorerBlock<span class="token operator">&gt;</span>
        &lt;UIExplorerBlock title<span class="token operator">=</span><span class="token string">"Dropdown Picker"</span><span class="token operator">&gt;</span>
          &lt;Picker
            style<span class="token operator">=</span><span class="token punctuation">{</span>styles<span class="token punctuation">.</span>picker<span class="token punctuation">}</span>
            selectedValue<span class="token operator">=</span><span class="token punctuation">{</span><span class="token keyword">this</span><span class="token punctuation">.</span>state<span class="token punctuation">.</span>selected2<span class="token punctuation">}</span>
            onValueChange<span class="token operator">=</span><span class="token punctuation">{</span><span class="token keyword">this</span><span class="token punctuation">.</span>onValueChange<span class="token punctuation">.</span><span class="token function">bind<span class="token punctuation">(</span></span><span class="token keyword">this</span><span class="token punctuation">,</span> <span class="token string">'selected2'</span><span class="token punctuation">)</span><span class="token punctuation">}</span>
            mode<span class="token operator">=</span><span class="token string">"dropdown"</span><span class="token operator">&gt;</span>
            &lt;Item label<span class="token operator">=</span><span class="token string">"hello"</span> value<span class="token operator">=</span><span class="token string">"key0"</span> <span class="token operator">/</span><span class="token operator">&gt;</span>
            &lt;Item label<span class="token operator">=</span><span class="token string">"world"</span> value<span class="token operator">=</span><span class="token string">"key1"</span> <span class="token operator">/</span><span class="token operator">&gt;</span>
          &lt;<span class="token operator">/</span>Picker<span class="token operator">&gt;</span>
        &lt;<span class="token operator">/</span>UIExplorerBlock<span class="token operator">&gt;</span>
        &lt;UIExplorerBlock title<span class="token operator">=</span><span class="token string">"Picker with prompt message"</span><span class="token operator">&gt;</span>
          &lt;Picker
            style<span class="token operator">=</span><span class="token punctuation">{</span>styles<span class="token punctuation">.</span>picker<span class="token punctuation">}</span>
            selectedValue<span class="token operator">=</span><span class="token punctuation">{</span><span class="token keyword">this</span><span class="token punctuation">.</span>state<span class="token punctuation">.</span>selected3<span class="token punctuation">}</span>
            onValueChange<span class="token operator">=</span><span class="token punctuation">{</span><span class="token keyword">this</span><span class="token punctuation">.</span>onValueChange<span class="token punctuation">.</span><span class="token function">bind<span class="token punctuation">(</span></span><span class="token keyword">this</span><span class="token punctuation">,</span> <span class="token string">'selected3'</span><span class="token punctuation">)</span><span class="token punctuation">}</span>
            prompt<span class="token operator">=</span><span class="token string">"Pick one, just one"</span><span class="token operator">&gt;</span>
            &lt;Item label<span class="token operator">=</span><span class="token string">"hello"</span> value<span class="token operator">=</span><span class="token string">"key0"</span> <span class="token operator">/</span><span class="token operator">&gt;</span>
            &lt;Item label<span class="token operator">=</span><span class="token string">"world"</span> value<span class="token operator">=</span><span class="token string">"key1"</span> <span class="token operator">/</span><span class="token operator">&gt;</span>
          &lt;<span class="token operator">/</span>Picker<span class="token operator">&gt;</span>
        &lt;<span class="token operator">/</span>UIExplorerBlock<span class="token operator">&gt;</span>
        &lt;UIExplorerBlock title<span class="token operator">=</span><span class="token string">"Picker with no listener"</span><span class="token operator">&gt;</span>
          &lt;Picker style<span class="token operator">=</span><span class="token punctuation">{</span>styles<span class="token punctuation">.</span>picker<span class="token punctuation">}</span><span class="token operator">&gt;</span>
            &lt;Item label<span class="token operator">=</span><span class="token string">"hello"</span> value<span class="token operator">=</span><span class="token string">"key0"</span> <span class="token operator">/</span><span class="token operator">&gt;</span>
            &lt;Item label<span class="token operator">=</span><span class="token string">"world"</span> value<span class="token operator">=</span><span class="token string">"key1"</span> <span class="token operator">/</span><span class="token operator">&gt;</span>
          &lt;<span class="token operator">/</span>Picker<span class="token operator">&gt;</span>
          &lt;Text<span class="token operator">&gt;</span>
            Cannot change the value of <span class="token keyword">this</span> picker because it doesn't update selectedValue<span class="token punctuation">.</span>
          &lt;<span class="token operator">/</span>Text<span class="token operator">&gt;</span>
        &lt;<span class="token operator">/</span>UIExplorerBlock<span class="token operator">&gt;</span>
        &lt;UIExplorerBlock title<span class="token operator">=</span><span class="token string">"Colorful pickers"</span><span class="token operator">&gt;</span>
          &lt;Picker
            style<span class="token operator">=</span><span class="token punctuation">{</span><span class="token punctuation">[</span>styles<span class="token punctuation">.</span>picker<span class="token punctuation">,</span> <span class="token punctuation">{</span>color<span class="token punctuation">:</span> <span class="token string">'white'</span><span class="token punctuation">,</span> backgroundColor<span class="token punctuation">:</span> <span class="token string">'#333'</span><span class="token punctuation">}</span><span class="token punctuation">]</span><span class="token punctuation">}</span>
            selectedValue<span class="token operator">=</span><span class="token punctuation">{</span><span class="token keyword">this</span><span class="token punctuation">.</span>state<span class="token punctuation">.</span>color<span class="token punctuation">}</span>
            onValueChange<span class="token operator">=</span><span class="token punctuation">{</span><span class="token keyword">this</span><span class="token punctuation">.</span>onValueChange<span class="token punctuation">.</span><span class="token function">bind<span class="token punctuation">(</span></span><span class="token keyword">this</span><span class="token punctuation">,</span> <span class="token string">'color'</span><span class="token punctuation">)</span><span class="token punctuation">}</span>
            mode<span class="token operator">=</span><span class="token string">"dropdown"</span><span class="token operator">&gt;</span>
            &lt;Item label<span class="token operator">=</span><span class="token string">"red"</span> color<span class="token operator">=</span><span class="token string">"red"</span> value<span class="token operator">=</span><span class="token string">"red"</span> <span class="token operator">/</span><span class="token operator">&gt;</span>
            &lt;Item label<span class="token operator">=</span><span class="token string">"green"</span> color<span class="token operator">=</span><span class="token string">"green"</span> value<span class="token operator">=</span><span class="token string">"green"</span> <span class="token operator">/</span><span class="token operator">&gt;</span>
            &lt;Item label<span class="token operator">=</span><span class="token string">"blue"</span> color<span class="token operator">=</span><span class="token string">"blue"</span> value<span class="token operator">=</span><span class="token string">"blue"</span> <span class="token operator">/</span><span class="token operator">&gt;</span>
          &lt;<span class="token operator">/</span>Picker<span class="token operator">&gt;</span>
          &lt;Picker
            style<span class="token operator">=</span><span class="token punctuation">{</span>styles<span class="token punctuation">.</span>picker<span class="token punctuation">}</span>
            selectedValue<span class="token operator">=</span><span class="token punctuation">{</span><span class="token keyword">this</span><span class="token punctuation">.</span>state<span class="token punctuation">.</span>color<span class="token punctuation">}</span>
            onValueChange<span class="token operator">=</span><span class="token punctuation">{</span><span class="token keyword">this</span><span class="token punctuation">.</span>onValueChange<span class="token punctuation">.</span><span class="token function">bind<span class="token punctuation">(</span></span><span class="token keyword">this</span><span class="token punctuation">,</span> <span class="token string">'color'</span><span class="token punctuation">)</span><span class="token punctuation">}</span>
            mode<span class="token operator">=</span><span class="token string">"dialog"</span><span class="token operator">&gt;</span>
            &lt;Item label<span class="token operator">=</span><span class="token string">"red"</span> color<span class="token operator">=</span><span class="token string">"red"</span> value<span class="token operator">=</span><span class="token string">"red"</span> <span class="token operator">/</span><span class="token operator">&gt;</span>
            &lt;Item label<span class="token operator">=</span><span class="token string">"green"</span> color<span class="token operator">=</span><span class="token string">"green"</span> value<span class="token operator">=</span><span class="token string">"green"</span> <span class="token operator">/</span><span class="token operator">&gt;</span>
            &lt;Item label<span class="token operator">=</span><span class="token string">"blue"</span> color<span class="token operator">=</span><span class="token string">"blue"</span> value<span class="token operator">=</span><span class="token string">"blue"</span> <span class="token operator">/</span><span class="token operator">&gt;</span>
          &lt;<span class="token operator">/</span>Picker<span class="token operator">&gt;</span>
        &lt;<span class="token operator">/</span>UIExplorerBlock<span class="token operator">&gt;</span>
      &lt;<span class="token operator">/</span>UIExplorerPage<span class="token operator">&gt;</span>
    <span class="token punctuation">)</span><span class="token punctuation">;</span>
  <span class="token punctuation">}</span><span class="token punctuation">,</span>

  changeMode<span class="token punctuation">:</span> <span class="token keyword">function</span><span class="token punctuation">(</span><span class="token punctuation">)</span> <span class="token punctuation">{</span>
    const newMode <span class="token operator">=</span> <span class="token keyword">this</span><span class="token punctuation">.</span>state<span class="token punctuation">.</span>mode <span class="token operator">===</span> Picker<span class="token punctuation">.</span>MODE_DIALOG
        <span class="token operator">?</span> Picker<span class="token punctuation">.</span>MODE_DROPDOWN
        <span class="token punctuation">:</span> Picker<span class="token punctuation">.</span>MODE_DIALOG<span class="token punctuation">;</span>
    <span class="token keyword">this</span><span class="token punctuation">.</span><span class="token function">setState<span class="token punctuation">(</span></span><span class="token punctuation">{</span>mode<span class="token punctuation">:</span> newMode<span class="token punctuation">}</span><span class="token punctuation">)</span><span class="token punctuation">;</span>
  <span class="token punctuation">}</span><span class="token punctuation">,</span>

  onValueChange<span class="token punctuation">:</span> <span class="token keyword">function</span><span class="token punctuation">(</span>key<span class="token punctuation">:</span> string<span class="token punctuation">,</span> value<span class="token punctuation">:</span> string<span class="token punctuation">)</span> <span class="token punctuation">{</span>
    const newState <span class="token operator">=</span> <span class="token punctuation">{</span><span class="token punctuation">}</span><span class="token punctuation">;</span>
    newState<span class="token punctuation">[</span>key<span class="token punctuation">]</span> <span class="token operator">=</span> value<span class="token punctuation">;</span>
    <span class="token keyword">this</span><span class="token punctuation">.</span><span class="token function">setState<span class="token punctuation">(</span></span>newState<span class="token punctuation">)</span><span class="token punctuation">;</span>
  <span class="token punctuation">}</span><span class="token punctuation">,</span>
<span class="token punctuation">}</span><span class="token punctuation">)</span><span class="token punctuation">;</span>

<span class="token keyword">var</span> styles <span class="token operator">=</span> StyleSheet<span class="token punctuation">.</span><span class="token function">create<span class="token punctuation">(</span></span><span class="token punctuation">{</span>
  picker<span class="token punctuation">:</span> <span class="token punctuation">{</span>
    width<span class="token punctuation">:</span> <span class="token number">100</span><span class="token punctuation">,</span>
  <span class="token punctuation">}</span><span class="token punctuation">,</span>
<span class="token punctuation">}</span><span class="token punctuation">)</span><span class="token punctuation">;</span>

module<span class="token punctuation">.</span>exports <span class="token operator">=</span> PickerExample<span class="token punctuation">;</span></div></div></div><div class="docs-prevnext"><a class="docs-next" href="docs/progressbarandroid.html#content">Next →</a></div>